objects/AcctSeed__Tax_Rate__c.object
<CustomObject>
    <description>Documents a specific tax rate for a given taxing authority.</description>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Purchase_Tax_Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Tax Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Purchase Tax Rates</relationshipLabel>
        <relationshipName>Purchase_Tax_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sales_Tax_Liability_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax Liability GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Sales Tax Rates</relationshipLabel>
        <relationshipName>Sales_Tax_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Group_External_ID__c</fullName>
        <formula>AcctSeed__Tax_Group__r.AcctSeed__External_Id2__c</formula>
        <label>Tax Group External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Group__c</fullName>
        <description>Tax Group serves as a container for the related child Tax Records and, when populated on the Billing Line, the calculated Tax Amount is a function of the Combined Tax Rate of all related child Tax Rates.</description>
        <inlineHelpText>Tax Group serves as a container for the related child Tax Records and, when populated on the Billing Line, the calculated Tax Amount is a function of the Combined Tax Rate of all related child Tax Rates.</inlineHelpText>
        <label>Tax Group</label>
        <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
        <relationshipLabel>Tax Rates</relationshipLabel>
        <relationshipName>Tax_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <label>Tax Rate %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Tax Rate</label>
    <nameField>
        <label>Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>